# SpectrumAnalyzer

./: .gitignore  SpectrumAnalyzer.sln
SpectrumAnalyzer/: App.axaml  App.axaml.cs  CommonServices.cs  Program.cs  SpectrumAnalyzer.csproj  ViewLocator.cs  app.manifest
SpectrumAnalyzer.Native/: GpuMath.cs  IQFft.cs  SpectrumAnalyzer.Native.csproj  SpectrumAnalyzer.Native.csproj.DotSettings  UnmanagedFloatBuffer.cs  UsprNative.cs
SpectrumAnalyzer.Native/CudaMathUtils/: CMakeLists.txt  cuda_math.cu  cuda_math.h  cuda_math_api.cu  obsolte_cuda_fft.cu
SpectrumAnalyzer.Native/CudaMathUtils/utils/: cufft_utils.h
SpectrumAnalyzer.Tests/: SignalUtilitiesTest.cs  SpectrumAnalyzer.Tests.csproj  UhdTest.cs  UtilitiesTests.cs
SpectrumAnalyzer.Tests/GPUTests/: CudaApiTests.cs
SpectrumAnalyzer.Tests/Services/: StreamingPoolTests.cs  TransportTests.cs
SpectrumAnalyzer.Tests/Utils/: SignalUtilitiesTest.cs
SpectrumAnalyzer/Controls/: SignalPlot.cs  SignalPlotOverlay.cs  WaterfallControl.cs
SpectrumAnalyzer/Models/: ComplexF.cs  IRadioViewModel.cs
SpectrumAnalyzer/Renderer/: BitmapRenderer.cs  FFTDrawingProperties.cs  FFTRepresentationProperties.cs  FftRepresentation.cs  IBitmapRenderer.cs  IDrawingProperties.cs  IRendererRepresentation.cs  IStreamingDataPool.cs  StreamingDataPool.cs  StreamingIQPool.cs  WaterfallColorLookup.cs  WaterfallDrawingProperties.cs  WaterfallRepresentation.cs  WaterfallRepresentationProperties.cs
SpectrumAnalyzer/Resources/: GenericStyles.axaml
SpectrumAnalyzer/Services/: FakeTransport.cs  IConnectionProperties.cs  IDeviceConnection.cs  IDeviceConnectionService.cs  ISDRDevice.cs  ITransport.cs  ITransportService.cs  SdrConnectionProperties.cs  UHDTransport.cs  UsprDeviceConnection.cs  UsrpConnectionProperties.cs  UsrpDevice.cs  UsrpDeviceConnection.cs  UsrpTransport.cs
SpectrumAnalyzer/Utilities/: AcceleratedMath.cs  BitmapGraphics.cs  Graphics.cs  PointExtensions.cs  RangesMapper.cs  SignalDecimation.cs  SignalGenerator.cs  WriteableBitmapUtilities.cs
SpectrumAnalyzer/ViewModels/: MainWindowViewModel.cs  (+2 more)
(+5 files in other folders)
